tests/cases/generics/errors/generic-function-value-unexpected.ari
fn identity[T](value: T) -> T {
  value
}

fn main() -> i64 {
  let op = identity;
  return 0;
}
